Refactor of ceri-process. Added test coverage.